# routes/users.js
@@ -5,6 +5,7 @@ const {
   loginUser,
   registerUser,
   logoutUser,
+  addUserCalendarDetails,
 } = require("../controllers/userController");
 
 const router = express.Router();
@@ -16,5 +17,7 @@ router.post("/login", loginUser);
 router.post("/logOut", logoutUser);
 
 router.post("/register", registerUser);
+
+router.post('/calendar', addUserCalendarDetails);
 
 module.exports = router;
